# PowerDashboard

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
components/: Animation.qml  AxisSystem.qml  HydRectangle.qml  ParametricRect.qml  PowerArc.qml  WindowTest.qml  qmldir
data/: PolarUtils.qml  qmldir
utils/: TriangularSignal.qml  Utilities.qml  qmldir
